added support icons

--- a/html/course.html
+++ b/html/course.html
@@ -204,7 +204,9 @@
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>25%</td>
                                 <td><p>3/07/2017</td>
-                                <td><button class="btn btn-primary" href="submit.html">Submit</button> </td>
+                                <td>
+                                    <button class="btn btn-primary" href="submit.html">Submit</button>
+                                </td>
 
                             </tr>
                             <tr>
@@ -213,7 +215,9 @@
                                 <td><a href="#"><img src="../images/pdf-icon.svg" class="pdf-icon"/> </a></td>
                                 <td>15%</td>
                                 <td><p>3/07/2017</td>
-                                <td><button class="btn btn-primary" href="submit.html">Submit</button> </td>
+                                <td>
+                                    <button class="btn btn-primary" href="submit.html">Submit</button>
+                                </td>
                             </tr>
 
                             </tbody>
@@ -232,7 +236,7 @@
                     </a>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
-                    <div class="panel-body">
+                    <div class="panel-body" style="padding: 0 40px;">
                         <h3>Course Content</h3>
                         <p>Artificial Intelligence (AI) is intelligence exhibited by machines. Examples include
                             self-driving cars, automatically planning a holiday, generating sensible conversation,
@@ -259,18 +263,25 @@
 
                         <h3>Course learning objectives</h3>
                         <p>Students who pass this course should be able to:</p>
+                        <br>
 
-                        <ol class="list-group">
-                            <li>Understand fundamental concepts and techniques of artificial intelligence, in areas such
+                        <div class="row">
+                            <div class="col-md-1" style="padding:0;"><h1 style="margin:0;">1.</h1></div>
+                            <div class="col-md-11" style="margin:auto;">
+                                Understand fundamental concepts and techniques of artificial intelligence, in areas such
                                 as
                                 search, machine learning, evolutionary computing, reasoning under uncertainty, rule
                                 based
                                 systems, and planning. (BE 3(a), 3(c), 3(d), 3(e)); (BSc COMP 1, 2, 3, 4).
-                            </li>
-                            <li>Apply these concepts and techniques to specific problems (including engineering
+                            </div>
+                        </div>
+                        <div class="row" style="margin:30px 0;">
+                            <div class="col-md-1" style="padding:0;"><h1 style="margin: 0;">2.</h1></div>
+                            <div class="col-md-11">
+                                Apply these concepts and techniques to specific problems (including engineering
                                 applications). (BE 3(a), 3(c), 3(d), 3(e), 3(f)); (BSc COMP 1, 2, 3, 4).
-                            </li>
-                        </ol>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -325,7 +336,8 @@
                                                                         </div>
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
-                                                                                <li style="">352 Cotton, Kelburn</li>
+                                                                                <li style="">352 Cotton, Kelburn
+                                                                                </li>
                                                                                 <li>Mengjie.Zhang@vuw.ac.nz</li>
                                                                                 <li>04 4635654</li>
                                                                             </ul>
@@ -360,7 +372,8 @@
                                                                         </div>
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
-                                                                                <li style="">352 Cotton, Kelburn</li>
+                                                                                <li style="">352 Cotton, Kelburn
+                                                                                </li>
                                                                                 <li>bing.xue@vuw.ac.nz</li>
                                                                                 <li>04 4635652</li>
                                                                             </ul>
@@ -396,7 +409,8 @@
                                                                         <!--<p class="rev-content">-->
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
-                                                                                <li style="">352 Cotton, Kelburn</li>
+                                                                                <li style="">352 Cotton, Kelburn
+                                                                                </li>
                                                                                 <li>harith.al-sahaf@vuw.ac.nz</li>
                                                                                 <li>04 4635652</li>
                                                                             </ul>
@@ -428,15 +442,59 @@
                     </a>
                 </div>
                 <div id="collapse5" class="panel-collapse collapse">
-                    <div class="panel-body" style="f">
-                        <a href="#">ECS Bugs</a> <br>
-                        <a href="#">Eclipse help</a><br>
-                        <a href="#">Tech Notes</a><br>
-                        <a href="#">ECS Girls</a><br>
-                        <a href="#">Forum</a><br>
-                        <a href="#">Documentation</a><br>
-                        <a href="#">Complaints</a><br>
-                        <a href="#">Grad Advice</a><br>
+                    <div class="panel-body" style="">
+
+                        <div class="row">
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/bug.png" style="width:10vw;">
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/eclipse-help.png" style="width:10vw;">
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/tech-notes.png" style="width:10vw;">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#"><p style="text-align:center;">ECS Bugs</p> <br> </a>
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#">Eclipse help</a><br>
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#">Tech Notes</a><br>
+                            </div>
+                        </div>
+
+                        <!--Next row-->
+
+                        <div class="row">
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/girls.png" style="width:10vw;">
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/girls.png" style="width:10vw;">
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <img src="../images/support-icons/complaints.png" style="width:10vw;">
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#">ECS Girls</a><br>
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#">Forum</a><br>
+                            </div>
+                            <div class="col-md-4" style="text-align:center;">
+                                <a href="#">Complaints</a><br>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -450,23 +508,6 @@
                 Wellington</a></p>
         </div>
     </div>
-
-    <!--
-    <div class="overlayLogin">
-    </div>
-
-    <div class="popupLogin">
-        <form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
-            <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
-
-            <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus=""/>
-            <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
-            <button id="login" class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">
-                Login
-            </button>
-        </form>
-    </div>
-    -->
 
     <!-- Login Popup -->
     <script>
