--- a/html/homepage.html
+++ b/html/homepage.html
@@ -76,13 +76,17 @@
                                 Courses
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">SWEN 301</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">SWEN
+                                    301</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">ENGR 301</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">ENGR
+                                    301</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">COMP 307</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">COMP
+                                    307</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">SWEN 303</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="course.html">SWEN
+                                    303</a></li>
                             </ul>
                         </li>
 
@@ -232,8 +236,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
 
@@ -244,35 +246,6 @@
         </div>
     </div>
 </div>
-
-<!--
-<div class="overlayLogin">
-</div>
-
-<div class="popupLogin">
-    <form action="" method="post" name="Login_Form" class="form-signin" onsubmit="return false">
-        <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
-
-        <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus=""/>
-        <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>
-        <button id="login" class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit">
-            Login
-        </button>
-    </form>
-</div>
--->
-
-<!-- Login Popup -->
-<script>
-    $(document).ready(function () {
-        $(".overlayLogin, .popupLogin").fadeToggle();
-    })
-
-    $("#login").click(function () {
-        $(".overlayLogin, .popupLogin").fadeToggle();
-    })
-
-</script>
 
 <!-- JAVA SCRIPT -->
 <script src="../js/wow.min.js"></script>
