Added postgrad page - Navbar links not yet updated

--- a/html/potential-careers.html
+++ b/html/potential-careers.html
@@ -124,7 +124,7 @@
 
 
             <div class="prospective-careers">
-                <img src="../images/ecen.jpg"/>
+                <img src="../images/software-dev.jpeg"/>
                 <div class="left-text">
                     <h2>Software Developer</h2>
                     <p>Software developers develop and maintain computer software and websites.</p>
@@ -137,7 +137,7 @@
             <hr/>
 
             <div class="prospective-careers">
-                <img src="../images/ecen.jpg"/>
+                <img src="../images/secure-anal.jpeg"/>
                 <div class="left-text">
                     <h2>Security Analyst</h2>
                     <p>Security analysts protect the information systems and computer networks of an organisation so information cannot be illegally accessed. They create security processes and monitor the IT security framework.</p>
@@ -163,20 +163,20 @@
             <hr/>
 
             <div class="prospective-careers">
-                <img src="../images/ecen.jpg"/>
+                <img src="../images/web-dev.jpeg"/>
                 <div class="left-text">
                     <h2>Web Developer</h2>
                     <p>Web developers plan, produce and maintain websites using web programming languages, software applications, and databases.</p>
                 </div>
                 <div class="prospective-careers-center-text">
                     <br><br><br>
-                    <p style="font-size:20px;">Software developers with some experience usually earn: <br /> <strong><font color=#006400> $58K-$80K per year</font> </strong></p>
+                    <p style="font-size:20px;">Web developers with some experience usually earn: <br /> <strong><font color=#006400> $40K-$60K per year</font> </strong></p>
                 </div>
             </div>
             <hr/>
 
             <div class="prospective-careers">
-                <img src="../images/ecen.jpg"/>
+                <img src="../images/game-dev.jpeg"/>
                 <div class="left-text">
                     <h2>Game Developer</h2>
                     <p>Game developers write, design, program, animate, and test games and applications for computers, gaming consoles, and cellphones. </p>
