minor bug fixes and improvements, images replaced in support section and are now links

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -94,10 +94,6 @@
                             <a href="marks.html" class="nav-link-a" role="button">Marks</a>
                         </li>
 
-                        <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Submission</a>
-                        </li>
-
                     </ul>
                 </div><!-- /.navbar-collapse -->
 
@@ -190,7 +186,14 @@
                                                 <i class="mdi-navigation-close right"></i></span>
                         </div>
                         <div style="padding:20px;">
-
+                            <p>Victoria University is ranked New Zealand’s most research intensive university—committed to generating knowledge with social, economic and environmental impact.</p>
+                            <a href="#">Latest Research</a>
+                            <br><br>
+                            <a href="#">Postgrad Opportunities</a>
+                            <br><br>
+                            <a href="#">Summer Internship</a>
+                            <br><br>
+                            <a href="#">R & D Success</a>
                         </div>
                     </div>
                 </div>
@@ -216,20 +219,16 @@
                                                 <i class="mdi-navigation-close right"></i></span>
                         </div>
                         <div style="padding:20px;">
-                            <p>Open to all Victoria University of Wellington students
-                                interested in Engineering, Computer science, or
-                                technology in general.</p>
-
-                            <p>Check out upcoming events on the <br>
-                                <a href="https://www.google.com/calendar/embed?src=duckalini%40gmail.com&ctz=Pacific%2FAuckland">VEC
-                                    Google Calendar</a>
+                            <p>View the School of Engineering and Computer Science’ staff list, including role and
+                                contact details.
                                 <br><br>
-                                Contact us: <br>
-                                <a href="mailto:president@vec.org.nz" target="_top"
-                                   style="margin-right:5px;">Email</a>our President
-                                <br>
-                                Or find us on
-                                <a href="https://www.facebook.com/engrclub">Facebook</a>
+                                <a href="#">Academic Staff</a>
+                                <br><br>
+                                <a href="#">Administration Staff</a>
+                                <br><br>
+                                <a href="#">Student Support</a>
+                                <br><br>
+                                <a href="#">Technical Staff</a>
                             </p>
                         </div>
                     </div>
