--- a/html/course.html
+++ b/html/course.html
@@ -42,6 +42,12 @@
 
 <script src="../layout/styles/main.css"></script>
 
+<script>
+    function submit(){
+        window.location.pathname = '/Project/html/submit.html';
+    }
+</script>
+
 
 <div id="container">
 
@@ -175,6 +181,7 @@
             </div>
 
 
+
             <!-- Assignment -->
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -205,7 +212,7 @@
                                 <td>25%</td>
                                 <td><p>3/07/2017</td>
                                 <td>
-                                    <button class="btn btn-primary" href="submit.html">Submit</button>
+                                    <button class="btn btn-primary" onclick="submit();">Submit</button>
                                 </td>
 
                             </tr>
@@ -216,7 +223,7 @@
                                 <td>15%</td>
                                 <td><p>3/07/2017</td>
                                 <td>
-                                    <button class="btn btn-primary" href="submit.html">Submit</button>
+                                    <button class="btn btn-primary" onclick="submit();">Submit</button>
                                 </td>
                             </tr>
 
@@ -338,7 +345,7 @@
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn
                                                                                 </li>
-                                                                                <li>Mengjie.Zhang@vuw.ac.nz</li>
+                                                                                <li><a href="mailto:Mengjie.Zhang@vuw.ac.nz">Email</a>
                                                                                 <li>04 4635654</li>
                                                                             </ul>
                                                                         </div>
@@ -373,8 +380,7 @@
                                                                         <div>
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn
-                                                                                </li>
-                                                                                <li>bing.xue@vuw.ac.nz</li>
+                                                                                <li><a href="mailto:bing.xue@vuw.ac.nz">Email</a>
                                                                                 <li>04 4635652</li>
                                                                             </ul>
                                                                         </div>
@@ -411,7 +417,7 @@
                                                                             <ul style="padding-left:20px;">
                                                                                 <li style="">352 Cotton, Kelburn
                                                                                 </li>
-                                                                                <li>harith.al-sahaf@vuw.ac.nz</li>
+                                                                                <li><a href="mailto:harith.al-sahaf@vuw.ac.nz">Email</a>
                                                                                 <li>04 4635652</li>
                                                                             </ul>
                                                                         </div>
@@ -444,15 +450,15 @@
                 <div id="collapse5" class="panel-collapse collapse">
                     <div class="panel-body" style="">
 
-                        <div class="row">
+                        <div class="row" style="margin-bottom:10px;">
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/bug.png" style="width:10vw;">
+                                <a href="#"> <img src="../images/support-icons/bug.jpg" style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/eclipse-help.png" style="width:10vw;">
+                                <a href="#"> <img src="../images/support-icons/eclipse-help.png" style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/tech-notes.png" style="width:10vw;">
+                                <a href="#"> <img src="../images/support-icons/tech-notes.png" style="width:10vw;"></a>
                             </div>
                         </div>
 
@@ -470,15 +476,15 @@
 
                         <!--Next row-->
 
-                        <div class="row">
+                        <div class="row" style="margin-bottom:10px;">
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/girls.png" style="width:10vw;">
+                                <a href="#"> <img src="../images/support-icons/girl.jpg" style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/girls.png" style="width:10vw;">
+                                <a href="#"><img src="../images/support-icons/forumn.jpg" style="width:10vw;"></a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
-                                <img src="../images/support-icons/complaints.png" style="width:10vw;">
+                                <a href="#"><img src="../images/support-icons/complaints.png" style="width:10vw;"></a>
                             </div>
                         </div>
 
