Added your-degree page, fixed navbar for all of prospective

--- a/html/about-compsci.html
+++ b/html/about-compsci.html
@@ -52,7 +52,7 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Home</a>
+                            <a href="about-home.html" class="nav-link-a" role="button">Home</a>
                         </li>
 
                         <li class="dropdown nav-li-wrapper">
@@ -63,7 +63,8 @@
                             <ul class="dropdown-menu drop-down-wrapper">
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-engr.html">Engineering</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="">Computer Science</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="about-compsci.html">Computer Science</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -74,13 +75,11 @@
                                 Study
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Your Degree</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="your-degree.html">Your Degree</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="study-areas.html">Study Areas</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Papers</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Postgrad</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="postgrad.html">Postgrad</a></li>
                             </ul>
                         </li>
 
@@ -90,11 +89,14 @@
                                 Careers
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Potential Careers</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="potential-careers.html">Potential Careers</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Work Experience</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="work-exp.html">Work Experience</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Awards & Scholarships</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="awards.html">Awards &
+                                    Scholarships</a></li>
                             </ul>
                         </li>
                     </ul>
