--- a/html/study-areas.html
+++ b/html/study-areas.html
@@ -43,7 +43,7 @@
         </nav>
 
         <!-- Navigation bar -->
-        <nav class="navbar navbar-inverse" style="padding:0px;">
+<nav class="navbar navbar-inverse" style="padding:0px;">
 
             <div class="container-fluid" style="float:left; margin-left:20px;">
 
@@ -52,7 +52,7 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="dropdown nav-li-wrapper">
-                            <a href="#" class="nav-link-a" role="button">Home</a>
+                            <a href="about-home.html" class="nav-link-a" role="button">Home</a>
                         </li>
 
                         <li class="dropdown nav-li-wrapper">
@@ -75,13 +75,11 @@
                                 Study
                                 <span class="caret"></span></a>
                             <ul class="dropdown-menu drop-down-wrapper">
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Your Degree</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="your-degree.html">Your Degree</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Study Areas</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="study-areas.html">Study Areas</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Papers</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Postgrad</a></li>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="postgrad.html">Postgrad</a></li>
                             </ul>
                         </li>
 
@@ -94,10 +92,10 @@
                                 <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="potential-careers.html">Potential Careers</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Work Experience</a>
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="work-exp.html">Work Experience</a>
                                 </li>
                                 <li role="separator" class="divider"></li>
-                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="#">Awards &
+                                <li class="nav-li-wrapper" style="padding-right: 0px;"><a href="awards.html">Awards &
                                     Scholarships</a></li>
                             </ul>
                         </li>
