--- a/html/your-degree.html
+++ b/html/your-degree.html
@@ -124,13 +124,9 @@
 
     <div id="prospective" class="hoc" style="" >
         <article class="introtxt" style="margin: 0 auto;">
-            <h1 class="heading">Postgraduate Study</h1>
+            <h1 class="heading">Your Degree</h1>
             <p style="font-size:20px; width: 1200px">
-                Engineering and Computer Science are complex and fast moving disciplines, and Victoria is committed to excellence in its teaching and research. Our undergraduate degrees provide an excellent platform for careers in engineering and computer science, but postgraduate study will enable you to explore the full breadth and depth of these dynamic disciplines.
-                <br><br>
-                Applicants for PhD thesis and Master thesis programmes are advised to discuss their proposed enrolment with a member of the Engineering and Computer Science staff, either in person or by mail/email. Applicants with qualifications not from VUW should bring/include a copy of their transcript and details of courses they have taken.
-                <br><br>
-               There are more details about all our postgraduate programs in our <a href="http://www.victoria.ac.nz/ecs/study/academic-prospectuses"> postgraduate prospectus</a>.
+                The Faculty of Engineering’s hands-on degrees enable students to develop their ideas into programmes, tangible devices and products.
             </p>
         </article>
 
@@ -144,27 +140,32 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse1" class="btn-block">
-                        <h3 class="panel-title">Postgraduate Diploma in Science</h3>
+                        <h3 class="panel-title">Types of Degree</h3>
                     </a>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
                         <div class="postgrad">
-                            <h1>Postgraduate Diploma in Science</h1>
+                            <h1></h1>
                         <div class="postgrad-left-text">
-
-                            <p>The Postgraduate Diploma in Science (PGDipSc), which requires 120 points of post-graduate study and can be completed full-time in two trimesters or part-time up to 4 years. As a research project is not compulsory, the PGDipSc will appeal to students wanting a post-graduate course-work qualification. The PGDipSc also provides an opportunity for those students who are not able to meet the entry requirements for the BSc (Hons) or MSc Part 1.</p>
+                            <h1>Undergraduate study</h1>
+                            <p>The Faculty of Engineering offers the four year Bachelor of Engineering with Honours BE(Hons) degree - an undergraduate honours degree, that leads to a career as a professional engineer or to postgraduate study in engineering.</p>
                         </div>
-                            <div class="postgrad-center-text">
-                                <strong><h2> <strong>Further develop your skills in:</strong></h2>
-                                <p style="font-size:20px;">
-                                    - Computer Science
-                                <br>
-                                    - Electronic and Computer Systems Engineering
-                                <br>
-                                    - Computer Graphics
-                                <br>
-                                    - Logic and Computation.
+                            <div class="your-degree-center-text">
+                                <h1>Postgraduate study</h1>
+                                <p>
+                                The Faculty offers postgraduate study in engineering following on from the undergraduate Bachelor of Engineering degree.
+                                    <br><br>
+                                    The following qualifications are offered:
+                                    <br>
+                                    Master of Computer Science
+                                    <br>
+                                    Master of Engineering
+                                    <br>
+                                    Master of Engineering Practice
+                                    <br>
+                                    Master of Software Development
+                                    PhD
                                 </p>
                             </strong>
                             </div>
@@ -178,31 +179,36 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="btn-block">
-                        <h3 class="panel-title">Master of Science</h3>
+                        <h3 class="panel-title">Workload / Skills </h3>
                     </a>
                 </div>
                 <div id="collapse2" class="panel-collapse collapse">
                     <div class="panel-body">
-
                         <div class="postgrad">
-                            <h1>Master of Science</h1>
+                            <h1></h1>
                         <div class="postgrad-left-text">
-
-                            <p>The Master of Science (MSc) is a postgraduate degree with a thesis as a major component. The degree is designed to provide an advanced level of professional competence with research experience. Note that for students who are enrolled part-time, the time limit on the MSc can be extended pro-rata up to a maximum of five years. <br> See the <a href="http://computergraphics.ac.nz/"> Computer Graphics </a>pages for more details on the programmes in Computer Graphics.</p>
+                            <h1>Undergraduate study</h1>
+                            <p>The Faculty of Engineering offers the four year Bachelor of Engineering with Honours BE(Hons) degree - an undergraduate honours degree, that leads to a career as a professional engineer or to postgraduate study in engineering.</p>
                         </div>
-                            <div class="postgrad-center-text">
-                                <strong><h2> <strong>The School offers three MSc programmes:</strong></h2>
-                                <p style="font-size:20px;">
-                                    - MSc in Computer Science
-                                <br>
-                                    - MSc in Electronic and Computer Systems
-                                <br>
-                                    - MSc in Computer Graphics
+                            <div class="your-degree-center-text">
+                                <h1>Postgraduate study</h1>
+                                <p>
+                                The Faculty offers postgraduate study in engineering following on from the undergraduate Bachelor of Engineering degree.
+                                    <br><br>
+                                    The following qualifications are offered:
+                                    <br>
+                                    Master of Computer Science
+                                    <br>
+                                    Master of Engineering
+                                    <br>
+                                    Master of Engineering Practice
+                                    <br>
+                                    Master of Software Development
+                                    PhD
                                 </p>
                             </strong>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -211,25 +217,36 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" class="btn-block">
-                        <h3 class="panel-title">Master of Engineering Practice</h3>
+                        <h3 class="panel-title">Degree Requirements</h3>
                     </a>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
                     <div class="panel-body">
-
                         <div class="postgrad">
-                            <h1>Master of Engineering Practice</h1>
+                            <h1></h1>
                         <div class="postgrad-left-text">
-
-                            <p>The Master of Engineering Practice (MEP) is a one-year 180 point Master’s degree, delivered through a combination of course work and project work. It is a graduate programme designed to build on the student’s technical knowledge, gained during their undergraduate degree in Electronic/Computer Systems Engineering or Software Engineering/Computer Science, or equivalent. It will focus on the advanced skills in applying technical knowledge to implement engineering solutions to challenges faced by New Zealand companies and organisations.</p>
+                            <h1>Undergraduate study</h1>
+                            <p>The Faculty of Engineering offers the four year Bachelor of Engineering with Honours BE(Hons) degree - an undergraduate honours degree, that leads to a career as a professional engineer or to postgraduate study in engineering.</p>
                         </div>
-                            <div class="postgrad-center-text">
-                               <strong> <p style="font-size:20px;">The programme culminates with a substantial industrial project, frequently based in a local company. Initially, it will have two streams, focussing on Software Engineering and on Computer Electronic and Computer Systems Engineering. The programme will start in trimester 3 of 2016.
-                                </p></strong>
+                            <div class="your-degree-center-text">
+                                <h1>Postgraduate study</h1>
+                                <p>
+                                The Faculty offers postgraduate study in engineering following on from the undergraduate Bachelor of Engineering degree.
+                                    <br><br>
+                                    The following qualifications are offered:
+                                    <br>
+                                    Master of Computer Science
+                                    <br>
+                                    Master of Engineering
+                                    <br>
+                                    Master of Engineering Practice
+                                    <br>
+                                    Master of Software Development
+                                    PhD
+                                </p>
                             </strong>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
