Various fixes as per meeting review

--- a/html/about-home.html
+++ b/html/about-home.html
@@ -126,9 +126,11 @@
 
                             <p style="font-size: 20px;">Learn to design and creatively apply emerging and established technology to solve problems with the School of Engineering and Computer Science. <br><br>
 
-Our innovative and flexible programmes will prepare you for successful careers as digital engineers and computer scientists. Work with students from all over the world in an inspiring and supportive learning environment.</p>
+Our innovative and flexible programmes will prepare you for successful careers as digital engineers and computer scientists. Work with students from all over the world in an inspiring and supportive learning environment.
+                                <br><br><br><br></p>
                         </div>
                         </div>
+
 
 
 
