--- a/html/postgrad.html
+++ b/html/postgrad.html
@@ -150,13 +150,14 @@
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
                         <div class="postgrad">
-                            <h1>Postgraduate Diploma in Science</h1>
-                        <div class="postgrad-left-text">
 
+                        <div class="postgrad-left-text">
+<h1>Postgraduate Diploma in Science</h1>
                             <p>The Postgraduate Diploma in Science (PGDipSc), which requires 120 points of post-graduate study and can be completed full-time in two trimesters or part-time up to 4 years. As a research project is not compulsory, the PGDipSc will appeal to students wanting a post-graduate course-work qualification. The PGDipSc also provides an opportunity for those students who are not able to meet the entry requirements for the BSc (Hons) or MSc Part 1.</p>
                         </div>
                             <div class="postgrad-center-text">
-                                <strong><h2> <strong>Further develop your skills in:</strong></h2>
+                                <h2> <strong>Further develop your skills in:</strong></h2>
+                                <strong>
                                 <p style="font-size:20px;">
                                     - Computer Science
                                 <br>
