--- a/html/your-degree.html
+++ b/html/your-degree.html
@@ -146,7 +146,6 @@
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">
                         <div class="postgrad">
-                            <h1></h1>
                         <div class="postgrad-left-text">
                             <h1>Undergraduate study</h1>
                             <p>The Faculty of Engineering offers the four year Bachelor of Engineering with Honours BE(Hons) degree - an undergraduate honours degree, that leads to a career as a professional engineer or to postgraduate study in engineering.</p>
@@ -157,16 +156,18 @@
                                 The Faculty offers postgraduate study in engineering following on from the undergraduate Bachelor of Engineering degree.
                                     <br><br>
                                     The following qualifications are offered:
-                                    <br>
-                                    Master of Computer Science
-                                    <br>
-                                    Master of Engineering
-                                    <br>
-                                    Master of Engineering Practice
-                                    <br>
-                                    Master of Software Development
-                                    PhD
+
                                 </p>
+                                <ul style="font-size: 18px">
+                                    <li>
+                                    Master of Computer Science
+                                    </li><li>
+                                    Master of Engineering
+                                    </li><li>
+                                    Master of Engineering Practice
+                                    </li><li>
+                                    Master of Software Development
+                                    PhD</li></ul>
                             </strong>
                             </div>
                         </div>
