removed inappropriate caption

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="pageintro" class="hoc clear">
             <article class="introtxt" style="margin: 0 auto;">
                 <h2 class="heading">Welcome to Victoria</h2>
-                <p>Where children get molested and dreams go to die</p>
+                <p>Find out more about Victoria University of Wellington, New Zealand’s globally ranked capital city university, and all that it has to offer.</p>
                 <footer>
                     <ul class="nospace inline pushright">
                         <li><a id="current" class="btn">Current Student</a></li>
