--- a/html/your-degree.html
+++ b/html/your-degree.html
@@ -50,7 +50,7 @@
         <!-- Banner bar -->
         <nav class="navbar navbar-inverse" style="padding-bottom:0;">
 
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../images/vic_logo.jpg" style="height:60px; float:left; margin: auto 0; margin-left: 40px;"/>
                 <img src="../images/logo.jpg" style="height:50px; float:left; margin: auto 0; margin-left: 40px;"/>
             </a>
