ECS bugs > Bugs

--- a/html/course.html
+++ b/html/course.html
@@ -464,7 +464,7 @@
 
                         <div class="row">
                             <div class="col-md-4" style="text-align:center;">
-                                <a href="#"><p style="text-align:center;">ECS Bugs</p> <br> </a>
+                                <a href="#"><p style="text-align:center;">Bugs</p> <br> </a>
                             </div>
                             <div class="col-md-4" style="text-align:center;">
                                 <a href="#">Eclipse help</a><br>
