--- a/html/homepage.html
+++ b/html/homepage.html
@@ -105,25 +105,25 @@
     <div id="body" style="padding:10px 40px 40px 40px;">
 
         <h1 style="padding-bottom:10px;">Notifications</h1>
-        <div class="alert alert-danger" style="">
+        <a href="course.html"> <div class="alert alert-danger" style="">
             <h4>Important</h4>
             <p>You missed the deadline for COMP7 307- Assignment 4</p>
-        </div>
+        </div></a>
 
-        <div class="alert alert-warning" style="">
+        <a href="course.html"><div class="alert alert-warning" style="">
             <h4>Warning</h4>
             <p>You have 1:58 hours to submit ENGR 301 Assignment 5 - Report</p>
-        </div>
+        </div></a>
 
-        <div class="alert alert-info" style="">
+        <a href="course.html"><div class="alert alert-info" style="">
             <h4>Information</h4>
             <p>There is a new assignment for COMP 307: Assignment 5 - Machine Learning</p>
-        </div>
+        </div></a>
 
-        <div class="alert alert-success" style="padding-top:15px;">
+        <a href="course.html"><div class="alert alert-success" style="padding-top:15px;">
             <h4>Success</h4>
             <p>Successfully submitted Assignment Three for SWEN 303</p>
-        </div>
+        </div></a>
 
         <div id="experienceSlider" class="clearfix card-element-wrapper">
             <div class="col-sm-3 cold-xs-12 single-card-box wow fadeInUpSmall"
